--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,10 @@
-
+pandas == 1.3.3
+requests == 2.26.0
+json == 2.0.9
+cbsodata == 1.3.4
+geopandas == 0.9.0
+shapely == 1.7.1
+folium == 0.12.1
+numpy == 1.20.3
+plotly == 5.3.1
+streamlit == 1.0.0
