--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -3,4 +3,4 @@ primaryColor='#ae5f58'
 backgroundColor="#f0f0f5"
 secondaryBackgroundColor="#e0e0ef"
 textColor="#262730"
-font="sans serif"
+font="calibri light"
