--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,6 +1,6 @@
 [theme]
 primaryColor='#ae5f58'
 backgroundColor="#f0f0f5"
-secondaryBackgroundColor="#e0e0ef"
+secondaryBackgroundColor="#e3f3be"
 textColor="#262730"
 font="calibri light"
