--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,5 +1,5 @@
 [theme]
-primaryColor='#ae5f58'
+primaryColor='#ac247c'
 backgroundColor="#f0f0f5"
 secondaryBackgroundColor="#e3f3be"
 textColor="#262730"
