--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,6 +1,6 @@
 [theme]
 primaryColor='#ac247c'
 backgroundColor="#f0f0f5"
-secondaryBackgroundColor="#abdacd"
+secondaryBackgroundColor="#d2ecbe"
 textColor="#262730"
 font="calibri light"
