--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,6 +1,6 @@
 [theme]
 primaryColor='#ac247c'
-backgroundColor="#ebe6ff"
+backgroundColor="#f9f7ff"
 secondaryBackgroundColor="#d2ecbe"
 textColor="#262730"
 font="calibri light"
