--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -3,4 +3,4 @@ primaryColor='#ac247c'
 backgroundColor="#f9f7ff"
 secondaryBackgroundColor="#d2ecbe"
 textColor="#262730"
-font="calibri light"
+font="monospace"
